// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RunDiffCard > matches snapshot with diff result 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small css-dev-only-do-not-override-mncuj7"
>
  <div
    class="ant-card-head"
  >
    <div
      class="ant-card-head-wrapper"
    >
      <div
        class="ant-card-head-title"
      >
        与历史 run 对比
      </div>
    </div>
  </div>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-space css-dev-only-do-not-override-mncuj7 ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
      style="width: 100%;"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-select ant-select-outlined css-dev-only-do-not-override-mncuj7 ant-select-single ant-select-show-arrow"
          style="width: 360px;"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-placeholder"
              >
                选择一个历史 run 作为对比基线
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none; -webkit-user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-alert ant-alert-warning ant-alert-no-icon css-dev-only-do-not-override-mncuj7"
          data-show="true"
          role="alert"
        >
          <div
            class="ant-alert-content"
          >
            <div
              class="ant-alert-message"
            >
              通过率变化：-5.0% ｜ 回归 2 例 ｜ 改善 1 例 ｜ 判分逻辑已变更
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div>
          回归用例：
          <span
            class="ant-tag ant-tag-red css-dev-only-do-not-override-mncuj7"
          >
            bc-001
          </span>
          <span
            class="ant-tag ant-tag-red css-dev-only-do-not-override-mncuj7"
          >
            bc-002
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RunDiffCard > matches snapshot without diff 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-small css-dev-only-do-not-override-mncuj7"
>
  <div
    class="ant-card-head"
  >
    <div
      class="ant-card-head-wrapper"
    >
      <div
        class="ant-card-head-title"
      >
        与历史 run 对比
      </div>
    </div>
  </div>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-space css-dev-only-do-not-override-mncuj7 ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
      style="width: 100%;"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-select ant-select-outlined css-dev-only-do-not-override-mncuj7 ant-select-single ant-select-show-arrow"
          style="width: 360px;"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-placeholder"
              >
                选择一个历史 run 作为对比基线
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none; -webkit-user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
